# libcloudproviders-rs

./: .gitmodules
libcloudproviders/: Cargo.toml
libcloudproviders/libcloudproviders-sys/: Cargo.toml  Gir.toml
libcloudproviders/libcloudproviders-sys/src/: lib.rs
libcloudproviders/libcloudproviders-sys/tests/: abi.rs  constant.c  layout.c  manual.h
